--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Meu primeiro site no GitHub Pages</title>
 </head>
 <body>
-    <h1>Eu sou um jovem aprendiz</h1>
+    <h1>Eu sou um dev PHP</h1>
 </body>
 </html>
