--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meu primeiro site no GitHub Pages</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Eu sou um dev PHP</h1>
+    <h1>Bem-vindo(a) a minha página</h1>
+    <p>Olá meu nome é Cesar Augusto, eu sou professor de Informática Educacional no CEM Menino Jesus, em Rancho Queimado-SC</p>
+    <img src="imagens/perfil.jpg" alt="foto de perfil">
 </body>
 </html>
