--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Bem-vindo(a) a minha página</h1>
     <p>Olá meu nome é Cesar Augusto, eu sou professor de Informática Educacional no CEM Menino Jesus, em Rancho Queimado-SC</p>
-    <img src="imagens/perfil.jpg" alt="foto de perfil">
+    <center>
+        <img src="imagens/perfil.jpg" alt="foto de perfil">
+    </center>
+    
+    <p>Contato: cesaraug76@hotmail.com</p>
 </body>
 </html>
