--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             <figcaption>Cesar Augusto</figcaption>
         </figure>
     </main>  
-
+    <p>Contato: cesaraug76@hotmail.com</p> 
     <footer>
         <span>
-            &copy; Cesar Augusto, 2023 - Todos os direitos reservados
+            &copy; Cesar Augusto - Todos os direitos reservados - 2023
         </span>
-        <p>Contato: cesaraug76@hotmail.com</p> 
+        
     </footer>
      
 </body>
