--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <aside class="techs">
                 <h2>Tecnologias</h2>
-                <div class="cards-containers">
+                <div class="cards-container">
                     <div class="card">
                         <img src="imagens/tecs/HTML5_1Color_Black.png" alt="logo html5"></img>
                     </div>
