--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </aside>  
-            <p>Contato: cesaraug76@hotmail.com</p>                  
+            <p style="margin-top: 20px;">Contato: cesaraug76@hotmail.com</p>                  
         </section>
         <figure>
             <img src="imagens/perfil.jpg" alt="imagem de Cesar Augusto"></img>
