--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img src="./img/logo2.png">
                 <h5>Argos Segurança</h5>
                 <p>Site criado para uma empresa especializada no ramo de segurança patrimonial, oferecendo soluções em segurança comercial e residencial com excelente qualidade.</p>
-                <a href="https://https://www.argosrs.com.br/" target="_blank">Ver Projeto</a>
+                <a href="https://www.argosrs.com.br/" target="_blank">Ver Projeto</a>
             </div>
 
             <div class="card">
