explicação do card do IMC

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <div class="card">
                 <img src="./img/imc.png">
                 <h5>Cálculo do IMC</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ad error harum doloribus labore,
-                    odio necessitatibus officia illum rem veritatis possimus aut</p>
+                <p>App para cálculo do Índice de Massa Corporal (IMC), criado com a tríade da internet (HTML, CSS E JavaScript).</p>
                 <a href="calculadora_imc.html" target="_blank">Ver Projeto</a>
             </div>
 
